--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "version": "1.0.0",
   "description": "Template for basic NodeJS project",
   "main": "index.js",
+  "author": "Carlos Tabangay",
+  "license": "MIT",
   "scripts": {
     "build": "npx tsc",
     "start": "nodemon",
     "lint": "npx eslint . --ext .ts",
+    "format": "prettier --write .",
     "preview": "node dist/index.js",
     "test": "jest"
   },
-  "keywords": [],
-  "author": "Carlos Tabangay",
-  "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "keywords": [
+    "nodejs",
+    "express"
+  ],
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -35,7 +50,10 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "pretty-quick": "^3.1.3",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
