--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.11.25",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
