--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "license": "MIT",
   "scripts": {
     "build": "npx tsc",
-    "start": "nodemon",
+    "dev": "nodemon",
     "lint": "npx eslint . --ext .ts",
     "format": "prettier --write .",
-    "preview": "node dist/index.js",
-    "test": "jest"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "prepare": "husky"
   },
   "husky": {
     "hooks": {
@@ -20,8 +21,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write ."
     ]
   },
   "keywords": [
@@ -30,43 +30,46 @@
   ],
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.11.25",
+    "@types/node": "^22.15.17",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
+    "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^4.18.3",
+    "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
-    "helmet": "^7.1.0",
+    "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
+    "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "@types/body-parser": "^1.19.5",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
-    "@types/passport": "^1.0.16",
+    "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
-    "@types/supertest": "^6.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "dotenv": "^16.4.5",
-    "eslint": "^8.56.0",
-    "husky": "^8.0.3",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.26.0",
+    "globals": "^16.1.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0"
   }
 }
